タグとアーカイブを検索から静的ページに変更

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -98,7 +98,7 @@ const years: number[] = [
         years.map((year) => (
           <li class={css({ mt: 2 })}>
             <a
-              href={`/search?year=${year}`}
+              href={`/reports/year/${year}`}
               class={css({
                 color: "inherit",
                 textDecoration: "none",
