--- a/src/pages/reports/index.astro
+++ b/src/pages/reports/index.astro
@@ -1,11 +1,11 @@
 ---
 import { getCollection } from "astro:content";
-import FormattedDate from "../../components/FormattedDate.astro";
 import Layout from "../../layouts/Layout.astro";
 import "../../index.css";
 import { css } from "../../../styled-system/css";
 import PageHead from "../../components/PageHead.astro";
 import SideBar from "../../components/SideBar.astro";
+import PostsTemplate from "../../components/PostsTemplate.astro";
 
 const posts = (await getCollection("reports")).sort(
   (a, b) => Date.parse(b.data.pubDate) - Date.parse(a.data.pubDate),
@@ -23,109 +23,7 @@ const posts = (await getCollection("reports")).sort(
         xl: { flexDirection: "row" },
       })}
     >
-      <main class={css({ width: "100%" })}>
-        <ul
-          class={css({
-            display: "flex",
-            flexDirection: "column",
-            gap: "0.5rem",
-            px: "2rem",
-          })}
-        >
-          {
-            posts.map((post, idx) => (
-              <li
-                class={css({
-                  borderTop: idx === 0 ? "none" : "1px solid #ccc",
-                  pt: "0.5rem",
-                  px: "0.5rem",
-                })}
-              >
-                <a
-                  href={`/reports/${post.slug}/`}
-                  class={css({
-                    display: "flex",
-                    backgroundColor: "#fff",
-                    justifyContent: "space-between",
-                    padding: ".8rem 1.2rem",
-                    borderRadius: "0.5rem",
-                    transition: "all 0.4s",
-                    gap: "1rem",
-                    flexDirection: "column",
-                    "&:hover": {
-                      textDecoration: "none",
-                      backgroundColor: "#e9e9e9",
-                    },
-                    lg: {
-                      flexDirection: "row",
-                    },
-                  })}
-                >
-                  <div class={css({ lg: { width: "calc(100% - 400px)" } })}>
-                    <h4
-                      class={css({
-                        fontSize: "1.2rem",
-                        fontWeight: "bold",
-                        mb: "0.5rem",
-                        textWrap: "wrap",
-                        wordBreak: "keep-all",
-                      })}
-                    >
-                      {post.data.title}
-                    </h4>
-                    <p class={css({ fontSize: "0.9rem", color: "#666" })}>
-                      <FormattedDate date={post.data.pubDate} />
-                    </p>
-                    <p
-                      class={css({
-                        fontSize: "1rem",
-                        wordBreak: "auto-phrase",
-                        display: "none",
-                        lg: { display: "block" },
-                      })}
-                    >
-                      {post.data.description}
-                    </p>
-                  </div>
-                  <div
-                    class={css({
-                      display: "flex",
-                      alignItems: "start",
-                      justifyContent: "start",
-                      gap: "1rem",
-                      lg: {
-                        width: "400px",
-                      },
-                    })}
-                  >
-                    <img
-                      src={post.data.heroImage}
-                      alt=""
-                      class={css({
-                        width: "45%",
-                        maxWidth: "500px",
-                        display: "none",
-                        sm: { display: "block" },
-                        lg: { maxWidth: "400px", width: "100%" },
-                      })}
-                    />
-                    <p
-                      class={css({
-                        fontSize: "1rem",
-                        wordBreak: "auto-phrase",
-                        display: "block",
-                        lg: { display: "none" },
-                      })}
-                    >
-                      {post.data.description}
-                    </p>
-                  </div>
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </main>
+      <PostsTemplate posts={posts} />
       <SideBar />
     </div>
   </div>
