--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -1,5 +1,6 @@
 ---
 import { MdArrowBackIos } from "react-icons/md";
+import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import Layout from "./Layout.astro";
@@ -33,7 +34,7 @@ const { title, pubDate, updatedDate, heroImage, tags = [] } = Astro.props;
         >
           {
             heroImage && (
-              <img
+              <Image
                 src={heroImage}
                 alt=""
                 class={css({
