--- a/src/components/PostsTemplate.astro
+++ b/src/components/PostsTemplate.astro
@@ -15,7 +15,8 @@ const { posts } = Astro.props;
       display: "flex",
       flexDirection: "column",
       gap: "0.5rem",
-      px: "2rem",
+      px: "0.8rem",
+      md: { px: "2rem" },
     })}
   >
     {
@@ -24,7 +25,9 @@ const { posts } = Astro.props;
           class={css({
             borderTop: idx === 0 ? "none" : "1px solid #ccc",
             pt: "0.5rem",
-            px: "0.5rem",
+            md: {
+              px: "0.5rem",
+            },
           })}
         >
           <a
