--- a/src/pages/members/index.astro
+++ b/src/pages/members/index.astro
@@ -39,8 +39,9 @@ import SideBar from "../../components/SideBar.astro";
                     display: "flex",
                     flexWrap: "wrap",
                     justifyContent: "start",
-                    gap: 4,
-                    padding: 4,
+                    gap: 2,
+                    padding: 2,
+                    md: { gap: 4, padding: 4 },
                   })}
                 >
                   {members.members.map((member) => (
@@ -61,6 +62,8 @@ import SideBar from "../../components/SideBar.astro";
             borderBottom: "1px solid",
             width: "fit-content",
             margin: ".3rem auto 0",
+            textDecoration: "underline",
+            fontSize: "1.2rem",
             "&:hover": {
               color: "{colors.rose.500}",
             },
