--- a/src/components/Profile/ProfileLayout.astro
+++ b/src/components/Profile/ProfileLayout.astro
@@ -3,7 +3,6 @@ import { css } from "../../../styled-system/css";
 import Layout from "../../layouts/Layout.astro";
 import SideBar from "../SideBar.astro";
 import ProfileHeader from "./ProfileHeader.astro";
-import ProfileSection from "./ProfileSection.astro";
 import PageHead from "../PageHead.astro";
 
 const profilePages = [
@@ -19,7 +18,7 @@ const profilePages = [
   },
   {
     ja: "研究業績",
-    en: "Research",
+    en: "publication",
     href: "/profile/publication",
   },
 ];
