--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -100,7 +100,7 @@ import ProfileLayout from "../../components/Profile/ProfileLayout.astro";
       <div class="table">
         <div>メール / mail</div>
         <div>
-          <Image src={MailImg} alt="mail" width="500px" />
+          <Image src={MailImg} alt="mail" width={500} />
           <span class={css({ fontSize: "80%" })}>
             （スパム防止のために画像にしています）
           </span>
