--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -36,7 +36,7 @@ const years: number[] = [
   })}
 >
   <div class={css({ width: "95%", mx: "auto", xl: { width: "100%" } })}>
-    <SearchBox />
+    <!-- <SearchBox /> -->
     <div class={css({ mt: 4 })}>
       <h4
         class={css({
