--- a/src/components/Top/LatestNews.astro
+++ b/src/components/Top/LatestNews.astro
@@ -36,9 +36,9 @@ import SearchBox from "../SearchBox.astro";
     >
       検索
     </h4>
-    <div class={css({ padding: "0 2rem" })}>
+    <!-- <div class={css({ padding: "0 2rem" })}>
       <SearchBox />
-    </div>
+    </div> -->
   </div>
 
   <div>
