--- a/src/components/Top/LatestNews.astro
+++ b/src/components/Top/LatestNews.astro
@@ -26,7 +26,7 @@ import SearchBox from "../SearchBox.astro";
     更新情報
   </h2>
 
-  <div class={css({ mb: "2rem" })}>
+  <!-- <div class={css({ mb: "2rem" })}>
     <h4
       class={css({
         padding: "1rem 2rem",
@@ -36,10 +36,10 @@ import SearchBox from "../SearchBox.astro";
     >
       検索
     </h4>
-    <!-- <div class={css({ padding: "0 2rem" })}>
+    <div class={css({ padding: "0 2rem" })}>
       <SearchBox />
-    </div> -->
-  </div>
+    </div>
+  </div> -->
 
   <div>
     <h4
