--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,12 +25,17 @@ const links = [
 
 <!doctype html>
 <html lang="ja">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="ScombZ Utiliesで、ScombZをもっと便利に。"
+      content="大型の汎用機、PC、そしてスマートフォン。コンピュータはその形を大きく変えてながら、私たちの生活を便利で豊かなものとしてきました。今後、コンピュータは生活の中にますます溶け込んでき、常に膨大な情報を扱えるようになっていきます。私たちはそのような未来に向けて、人とコンピュータあるいは人と情報の関係を考え、そこで必要となる方式やデバイスを、もの作りを通して実証し、新たな体験を生み出していきます。"
     />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content="芝浦工業大学 工学部 実世界インタラクション研究室" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pai.eng.shibaura-it.ac.jp" />
+    <meta property="og:image" content="https://pai.eng.shibaura-it.ac.jp/ogp.jpg" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
