pai.iseドメインをpai.engドメインに移行

--- a/src/components/Profile/ProfileLayout.astro
+++ b/src/components/Profile/ProfileLayout.astro
@@ -18,7 +18,7 @@ const profilePages = [
   },
   {
     ja: "研究業績",
-    en: "publication",
+    en: "Publication",
     href: "/profile/publication",
   },
 ];
