--- a/src/components/TopLogo.astro
+++ b/src/components/TopLogo.astro
@@ -11,6 +11,7 @@ import "@fontsource-variable/noto-sans-jp";
     alignItems: "center",
     justifyContent: "center",
     width: "100%",
+    overflow: "hidden",
     height: "100%",
     position: "relative",
     color: "#fff",
