--- a/src/components/Profile/ProfileLayout.astro
+++ b/src/components/Profile/ProfileLayout.astro
@@ -49,6 +49,16 @@ const { pageIndex } = Astro.props;
       property="og:image"
       content="https://pai.eng.shibaura-it.ac.jp/ogp_manabe.jpg"
     />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="真鍋 宏幸 / Hiroyuki Manabe" />
+    <meta
+      name="twitter:description"
+      content="芝浦工業大学 工学部教授 真鍋宏幸"
+    />
+    <meta
+      name="twitter:image"
+      content="https://pai.eng.shibaura-it.ac.jp/ogp_manabe.jpg"
+    />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
