--- a/src/components/LabDataGraph.astro
+++ b/src/components/LabDataGraph.astro
@@ -129,7 +129,7 @@ import "../index.css";
       type: "spline",
     },
     title: {
-      text: "過去24時間の環境データ",
+      text: "過去12時間の環境データ",
       align: "center",
     },
     yAxis: [
@@ -219,7 +219,7 @@ import "../index.css";
         title: {
           text: "Time",
         },
-        tickInterval: 60,
+        tickInterval: 120,
       },
       series: [
         {
@@ -261,9 +261,9 @@ import "../index.css";
         "https://script.googleusercontent.com/a/macros/shibaura-it.ac.jp/echo?user_content_key=sTi6ZA7LfLQHwhORyKbCYgIdcHM2tN3gGfTL8-TIH6HT2N-uRKTJLUBKfbctSQ431mn6ADle-fQhm1w3dHusUNwYKz-Klc4kOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMi80zadyHLKDOg-_jwvv1qVk8iAwux5u_ho89uN76N-s_qqbqbvHktnF2Z97WxeaHPRrjG0r_QmHM2MKyqdqz-Ye2uJOWuIIPw0aBpngFx3r9EteheGPNm7RO-mKWJsyuUXpbWg8ZRoxcy6pr-Oj0FQ&lib=M0ZTSKvy-Bs_DKGsO855ueb45LLkIKNRq",
       );
       const rawData = (await response.json()) as DataType[];
-      const data: DataType[] = rawData.slice(-1440).map((d) => ({
+      const data: DataType[] = rawData.slice(-720).map((d) => ({
         ...d,
-        time: format(new Date(d.time), "MM/dd HH:mm"),
+        time: format(new Date(d.time), "HH:mm"),
       }));
       renderChart(data);
       const recentData = data[data.length - 1];
@@ -274,7 +274,7 @@ import "../index.css";
         }
       });
       document.getElementById("recent-data-title")!.textContent =
-        `最新の状況 (${recentData.time.slice(-5)}更新)`;
+        `最新の状況 (${recentData.time}更新)`;
     } catch (error) {
       console.error("Error fetching data:", error);
     }
